@@ -15,7 +15,7 @@
     <name>tools</name>
     <description>tools</description>
     <properties>
-        <revision>2.1.0.6</revision>
+        <revision>2.1.1.0</revision>
         <java.version>21</java.version>
         <kotlin.version>2.4.0</kotlin.version>
         <mybatis-plus.version>3.5.16</mybatis-plus.version>
@@ -23,6 +23,9 @@
         <mysql.version>9.7.0</mysql.version>
         <gson.version>2.14.0</gson.version>
         <rocketmq-spring.version>2.3.6</rocketmq-spring.version>
+        <javassist.version>3.30.2-GA</javassist.version>
+        <lz4-java.version>1.10.1</lz4-java.version>
+        <commons-beanutils.version>1.11.0</commons-beanutils.version>
         <commons-lang3.version>3.20.0</commons-lang3.version>
         <guava.version>33.6.0-jre</guava.version>
         <fastjson2.version>2.0.62</fastjson2.version>
@@ -129,6 +132,21 @@
                 <version>${rocketmq-spring.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>${javassist.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>at.yawk.lz4</groupId>
+                <artifactId>lz4-java</artifactId>
+                <version>${lz4-java.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons-beanutils.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
@@ -191,39 +209,18 @@
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
-            <modules>
-                <module>tools-base</module>
-                <module>tools-data</module>
-                <module>tools-service</module>
-                <module>tools-factory</module>
-                <module>tools-web</module>
-            </modules>
         </profile>
         <profile>
             <id>prod</id>
             <properties>
                 <mvn.profile.active>prod</mvn.profile.active>
             </properties>
-            <modules>
-                <module>tools-base</module>
-                <module>tools-data</module>
-                <module>tools-service</module>
-                <module>tools-factory</module>
-                <module>tools-web</module>
-            </modules>
         </profile>
         <profile>
             <id>docker</id>
             <properties>
                 <mvn.profile.active>docker</mvn.profile.active>
             </properties>
-            <modules>
-                <module>tools-base</module>
-                <module>tools-data</module>
-                <module>tools-service</module>
-                <module>tools-factory</module>
-                <module>tools-web</module>
-            </modules>
         </profile>
     </profiles>
 
@@ -234,7 +231,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.15.0</version>
                 <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <proc>full</proc>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
